01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/10.-archive-record.md
---
title: "10. Archive record"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/10.-archive-record"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/10.-archive-record.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:38e111428cfda8e62d3daa94bc3cba97b735c8d716c504e8efffc0830c5e91c6"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/10.-archive-record.md).

# 10. Archive record

### **Pre condition**

* A declaration has the status ‘In progress’, ‘In Review’ ‘Validated’ or ‘Requires Updates’
* You can not archive/revoke a registered record. This is planned for 1.4

### **Triggers**

Declaration deemed to be invalid, duplicate or missing mandatory data that they don’t expect to ever been completed

### **Standard flow**

1. Registrar or Registration Agent finds record
2. User clicks on the name of the record
3. User assigns themselves to the record
4. User clicks “Archive”
5. User confirms actions to archive record
6. Declaration is sent to the Outbox for processing
7. Once processed the declaration status is updated to ‘Archived’

### **Post conditions**

* Record audit updated to show that the record has been archived
* Registrar or Registration Agent can reinstate record if deemed to be a valid declaration again.

### **Variations/Exceptions**

When a record is marked as a duplicate by a Registrar then the record status will be changed to 'Archived'

{% embed url="<https://www.loom.com/share/2e2e7ae37af74dfabe8079e108290e74?sid=c964e33f-8207-4a14-8df6-4070ce886334>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/10.-archive-record.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
