01 - OpenCRVS Documentation/v1.9/product-specifications/core-functions/10.-archive-record.md
---
title: "10. Archive record"
source_url: "https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/10.-archive-record"
markdown_url: "https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/10.-archive-record.md"
version: "v1.9"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:8bc971ab605377486bd0210a79335eed7d1c5e38fb97e079d37251aa1547724d"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/10.-archive-record.md).

# 10. Archive record

### **Pre condition**

* A declaration has the status ‘Notifed’, 'Declared'’ or ‘Validated’
* You can not revoke a registered record. This is planned for 1.10

### **Triggers**

* Declaration deemed to be invalid, duplicate or missing mandatory data that they don’t expect to ever been completed
* A user has `record.declared.archive[event=event]`

### **Standard flow**

1. User finds record
2. User clicks on the name of the record
3. User assigns themselves to the record
4. User clicks “Archive”
5. User confirms actions to archive record
6. Declaration is sent to the Outbox for processing
7. Once processed the declaration status is updated to ‘Archived’

### **Post conditions**

* Record audit updated to show that the record has been archived
* A user with `record.archived.reinstate[event=event]` can reinstate record if deemed to be a valid declaration again.

{% embed url="<https://youtu.be/iU9PpynkGV8>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.9/product-specifications/core-functions/10.-archive-record.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
